--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -37,6 +37,13 @@
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
+  animation: spin 15s linear infinite;
+}
+
+@keyframes spin {
+  @for $i from 0 through 360 {
+    #{$i / 3.6}% {background-color: hsl($i, 50%, 50%);}
+  }
 }
 
 .avatar-img {
