--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -174,8 +174,7 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-/*davidseal*/
+  font-family: "Lato", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #4a5055;
   background-color: hsl(180, 75%, 95%);
   display: block;
