--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -77,7 +77,6 @@
 
 ul.social-list {
   padding-left: 0px;
-  background-color: #3D99CE;
   text-align: center;
 }
 ul.social-list > li {
@@ -86,11 +85,12 @@ ul.social-list > li {
 }
 /* ul.social-list > li:hover {
   background-color: #2779BF;
-} */
+}
 ul.social-list > li > a {
   color: white;
   text-decoration: none;
 }
+*/
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
