--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -81,16 +81,18 @@ ul.social-list {
 }
 ul.social-list > li {
   display: inline-block;
-  padding: 0px 0px;
+  padding: 0px 8px;
 }
-/* ul.social-list > li:hover {
+ ul.social-list > li:hover {
+  opacity: 50%;
   background-color: #2779BF;
 }
-ul.social-list > li > a {
+
+/* ul.social-list > li > a {
   color: white;
   text-decoration: none;
 }
-*/
+ */
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -207,7 +209,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 300; }
 h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
-h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
+h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; font-weight: 400; }
 h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
 h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
 h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
